--- a/Editor/Sainna.Onomatopoeia.Editor.asmdef
+++ b/Editor/Sainna.Onomatopoeia.Editor.asmdef
@@ -1,10 +1,13 @@
 {
-    "name": "moe.sainna.Onomatopoeia",
+    "name": "Sainna.Onomatopoeia.Editor",
     "rootNamespace": "",
     "references": [
+        "GUID:c91763a762a4055448a7e029ae9f2ea9",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
