--- a/Runtime/Sainna.Onomatopoeia.asmdef
+++ b/Runtime/Sainna.Onomatopoeia.asmdef
@@ -1,13 +1,10 @@
 {
-    "name": "moe.sainna.Onomatopoeia.Editor",
+    "name": "Sainna.Onomatopoeia",
     "rootNamespace": "",
     "references": [
-        "GUID:c91763a762a4055448a7e029ae9f2ea9",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
